<resources>
    <string name="app_name">The Witcher TRPG Companion App</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>

    <string name="HP"><u><b>HP</b></u></string>
    <string name="Stamina"><u><b>STAMINA</b></u></string>
    <string name="Crowns"><u><b>CROWNS</b></u></string>
    <string name="no_characters">No Characters</string>
    <string name="add_new_character">Add new character</string>
    <string name="tap_the_add_button_to_create_a_character">Tap the Add button to create a character.</string>
    <string name="current_ip">CURRENT IP</string>
    <string name="no_equipment">No Equipment</string>
    <string name="add_equipment_from_the_new_item_screen">Add equipment from the New Item Screen</string>
    <string name="improvement_points">Improvement Points:</string>
    <string name="about_header">About</string>
    <string name="disclaimer_header">Disclaimer</string>
    <string name="attributions_header">Attributions</string>
    <string name="icons_used_in_application">Icons used in Application:</string>
    <string name="the_witcher_trpg_core_rulebook">The Witcher TRPG Core Rulebook:</string>
    <string name="add">Add</string>
    <string name="buy">Buy</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="total_weight">Total Weight</string>
    <string name="cost_per_item">Cost Per Item</string>
    <string name="item_description">Item Description</string>
    <string name="learn_spell">Learn</string>
    <string name="learn_hex">Learn Hex</string>
    <string name="event_title">Event Title</string>
    <string name="event_description">Event Description</string>
    <string name="remove">Remove</string>
    <string name="enableMagicalGiftsButton">Enable Magical Gifts</string>
    <string name="current_sp">Current SP:</string>
    <string name="left_arm_sp">Left Arm SP:</string>
    <string name="right_arm_sp">Right Arm SP:</string>
    <string name="equipment_notes">Equipment Notes</string>
    <string name="equip">Equip</string>
    <string name="cast">Cast</string>
    <string name="sta_cost">Stamina Cost</string>
    <string name="effect">Effect</string>
    <string name="range">Range</string>
    <string name="spell_casting_dc">Spell Casting DC</string>
    <string name="duration">Duration</string>
    <string name="defense">Defense</string>
    <string name="danger">Danger</string>
    <string name="req_to_lift">Requirement to lift</string>
    <string name="side_effect">Side Effect</string>
    <string name="variable">Variable</string>
    <string name="prep_time">Preparation Time</string>
    <string name="difficulty">Difficulty</string>
    <string name="components">Components</string>
    <string name="current_reliability">Current Reliability:</string>
    <string name="current_hp">CURRENT HP</string>
    <string name="_0">0</string>
    <string name="okay">Okay</string>
    <string name="do_not_show_again">Do not show again.</string>
    <string name="age">age</string>
    <string name="character_image">Character Image</string>
    <string name="select_item_type">Select Item Type</string>
    <string name="light">Light</string>
    <string name="medium">Medium</string>
    <string name="heavy">Heavy</string>
    <string name="add_campaign_note">Add Campaign Note</string>
    <string name="character_name">Character Name</string>
    <string name="select_gender">Select Gender</string>
    <string name="select_race">Select Race</string>
    <string name="select_profession">Select Profession</string>
    <string name="perks">Perks:</string>
    <string name="defining_skill">Defining SKill:</string>
    <string name="next">NEXT</string>
    <string name="back">BACK</string>
    <string name="finish">Finish</string>
    <string name="tomes_of_chaos_dlc">Tomes Of Chaos</string>
    <string name="hexes">Hexes</string>
    <string name="no_hexes">No Hexes Added</string>
    <string name="novice_druid_invocations">Novice Druid Invocations</string>
    <string name="journeyman_druid_invocations">Journeyman Druid Invocations</string>
    <string name="master_druid_invocations">Master Druid Invocations</string>
    <string name="hierophant_flaminika_druid_invocations">Hierophant Flaminika Druid Invocations</string>
    <string name="novice_priest_invocations">Novice Priest Invocations</string>
    <string name="journeyman_priest_invocations">Journeyman Priest Invocations</string>
    <string name="master_priest_invocations">Master Priest Invocations</string>
    <string name="arch_priest_invocations">Arch Priest Invocations</string>
    <string name="invocations">Invocations</string>
    <string name="priest_invocations">Priest Invocations</string>
    <string name="druid_invocations">Druid Invocations</string>
    <string name="no_invocations">No Invocations Added</string>
    <string name="spells">Spells</string>
    <string name="rituals">Rituals</string>
    <string name="signs">Signs</string>
    <string name="novice_rituals">Novice Rituals</string>
    <string name="journeyman_rituals">Journeyman Rituals</string>
    <string name="master_rituals">Master Rituals</string>
    <string name="no_rituals">No Rituals Added</string>
    <string name="basic_signs">Basic Signs</string>
    <string name="alternate_signs">Alternate Signs</string>
    <string name="minor_gifts">Minor Gifts</string>
    <string name="major_gifts">Major Gifts</string>
    <string name="no_gifts">No Magical Gifts Added</string>
    <string name="no_signs">No Signs Added</string>
    <string name="novice_spells">Novice Spells</string>
    <string name="journeyman_spells">Journeyman Spells</string>
    <string name="master_spells">Master Spells</string>
    <string name="no_spells">No Spells Added</string>
    <string name="add_event">Add Event</string>
    <string name="add_equipment">Add Equipment</string>
    <string name="inventory">Inventory</string>
    <string name="add_new_item">Add New Item</string>
    <string name="all_hexes">All Hexes</string>
    <string name="all_invocations">All Invocations</string>
    <string name="your_profession_cannot_perform_magic">Your profession cannot perform magic</string>
    <string name="social_standing">Social Standing</string>
    <string name="reputation">Reputation</string>
    <string name="clothing">Clothing</string>
    <string name="hair_style">Hair Style</string>
    <string name="personality">Personality</string>
    <string name="affectations">Affectations</string>
    <string name="valued_person">Valued Person</string>
    <string name="values">Values</string>
    <string name="feelings_on_people">Feelings On People</string>
    <string name="skills">Skills</string>
    <string name="gear_pick_5">Gear (Pick 5)</string>
    <string name="all_rituals">All Rituals</string>
    <string name="all_signs">All Signs</string>
    <string name="all_spells">All Spells</string>
    <string name="sort_by">Sort by</string>
    <string name="default_string">Default</string>
    <string name="new_character">New Character</string>
    <string name="custom_magic">Custom Magic</string>
    <string name="custom_equipment">Custom Equipment</string>
    <string name="weight">Weight</string>
    <string name="cost">Cost</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="intelligence_skills">Intelligence Skills - </string>
    <string name="reflex_skills">Reflex Skills - </string>
    <string name="title_activity_custom_attribute">CustomAttributeActivity</string>
    <string name="custom">Custom</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="added_to">added to</string>
    <string name="magical_gifts">Magical Gifts</string>
</resources>