<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:layout_marginBottom="50dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bkg"
        android:padding="20dp">

        <TextView
            android:id="@+id/vigor_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/customTitle"
            app:layout_constraintTop_toBottomOf="@+id/customTitle" />

        <TextView
            android:id="@+id/stamina_text"
            android:layout_width="0dp"
            android:layout_height="14dp"
            android:layout_marginTop="8dp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/customTitle"
            app:layout_constraintTop_toBottomOf="@+id/vigor_text" />

        <com.witcher.thewitcherrpg.core.presentation.CustomTitleView
            android:id="@+id/customTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sta_cost_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sta_cost"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/element_text" />

        <TextView
            android:id="@+id/range_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/range"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/sta_cost_text"
            app:layout_constraintTop_toBottomOf="@+id/sta_cost_text" />

        <TextView
            android:id="@+id/duration_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/duration"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/range_text"
            app:layout_constraintTop_toBottomOf="@+id/range_text" />

        <TextView
            android:id="@+id/defense_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/defense"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/duration_text"
            app:layout_constraintTop_toBottomOf="@+id/duration_text" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/removebutton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_max="300dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/defense_text">

            <TextView
                android:id="@+id/effect_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp" />
        </ScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/castSpellbutton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bkg"
            android:text="@string/cast"
            android:textColor="?colorAccent"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.3" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_bkg"
            android:text="@string/cancel"
            android:textColor="?colorAccent"
            android:textSize="10sp"
            app:layout_constraintEnd_toStartOf="@+id/castSpellbutton"
            app:layout_constraintTop_toTopOf="@+id/castSpellbutton"
            app:layout_constraintWidth_percent="0.3" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/removebutton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bkg"
            android:text="@string/remove"
            android:textColor="?colorAccent"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/castSpellbutton"
            app:layout_constraintWidth_percent="0.3" />

        <TextView
            android:id="@+id/element_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/customTitle"
            app:layout_constraintTop_toBottomOf="@+id/customTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>