<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="MainViewModel"
            type="com.witcher.thewitcherrpg.core.presentation.MainCharacterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature_character_creation.presentation.CharCreationActivity">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.03"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textViewVigor"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:autoSizeTextType="uniform"
                android:text='@{"Vigor: " + MainViewModel.vigor}' />

            <TextView
                android:id="@+id/textViewFocus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:autoSizeTextType="uniform"
                android:text='@{"Focus: " + MainViewModel.focus}'/>

            <TextView
                android:id="@+id/textViewStamina"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:autoSizeTextType="uniform"
                android:text='@{"Stamina: " + MainViewModel.sta}'/>

        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/MagicTabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:tabGravity="fill"
            app:tabIndicatorColor="?colorAccent"
            app:tabMode="auto">

            <com.google.android.material.tabs.TabItem
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/spells" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rituals" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/hexes" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/signs" />


        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/MagicTabs" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?colorOnPrimary"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.878"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.93"
            app:srcCompat="@drawable/ic_baseline_add_24"
            android:contentDescription="@string/add_new_character">

        </com.google.android.material.floatingactionbutton.FloatingActionButton>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addSignButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="?colorOnPrimary"
            app:tint="@color/blue"
            android:clickable="true"
            android:focusable="true"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/addButton"
            app:layout_constraintEnd_toEndOf="@+id/addButton"
            app:layout_constraintStart_toStartOf="@+id/addButton"
            app:srcCompat="@drawable/ic_aard_sign_icon">

        </com.google.android.material.floatingactionbutton.FloatingActionButton>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addSpellButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?colorOnPrimary"
            android:clickable="true"
            android:focusable="true"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/addRitualButton"
            app:layout_constraintEnd_toEndOf="@+id/addRitualButton"
            app:layout_constraintStart_toStartOf="@+id/addRitualButton"
            app:srcCompat="@drawable/ic_magic_icon"
            app:tint="?colorOnPrimaryContainer">

        </com.google.android.material.floatingactionbutton.FloatingActionButton>

        <!--
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/addSpellButton"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@+id/addSpellButton"
            app:layout_constraintStart_toStartOf="@+id/addSpellButton"
            app:lottie_autoPlay="true"
            app:lottie_fileName="fire_animation.json"
            android:backgroundTint="?colorOnPrimary"
            android:background="@drawable/ripple_bkg"
            android:clickable="true"
            app:lottie_loop="true" />
            -->

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addHexButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?colorOnPrimary"
            android:clickable="true"
            android:focusable="true"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/addSignButton"
            app:layout_constraintEnd_toEndOf="@+id/addSignButton"
            app:layout_constraintStart_toStartOf="@+id/addSignButton"
            app:srcCompat="@drawable/ic_hex_icon"
            app:tint="?textFillColor">

        </com.google.android.material.floatingactionbutton.FloatingActionButton>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addRitualButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?colorOnPrimary"
            android:clickable="true"
            android:focusable="true"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/addHexButton"
            app:layout_constraintEnd_toEndOf="@+id/addHexButton"
            app:layout_constraintStart_toStartOf="@+id/addHexButton"
            app:srcCompat="@drawable/ic_ritual_icon"
            app:tint="?colorContainer">

        </com.google.android.material.floatingactionbutton.FloatingActionButton>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>